--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "angular-ui-router": "^1.0.0-rc.1",
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "request": "^2.81.0"
   }
 }
