--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@uirouter/angularjs": "^1.0.3",
     "angular": "1.6.1",
+    "angular-animate": "1.6.3",
     "angular-ui-router": "^1.0.0-rc.1",
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
